--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul id="main-nav" class="nav">
                 <li><a href="/">Home</a></li>
-                <li><a href="/coffees"></a></li>
+                <li><a href="/coffees">Coffees</a></li>
                 <li><a href="/brewers">Brewers</a></li>
                 <li><a href="/specials" class="featured">Specials</a></li>
             </ul>
