--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/coffees">Coffees</a></li>
                 <li><a href="/brewers">Brewers</a></li>
-                <li><a href="/specials" class="featured">Specials</a></li>
+                <li>
+                    <a 
+                        href="/specials" 
+                        class="featured"                        
+                    >Specials</a></li>
             </ul>
         </nav>
     </header>
