used inherit on footer

--- a/index.html
+++ b/index.html
@@ -22,4 +22,9 @@
             </ul>
         </nav>
     </header>
+
+    <footer class="footer">
+        &copy; 2020 Diana Coffee &mdash;
+        <a href="/terms">Terms of use</a>
+    </footer>
 </body>
