Good example of using rems and ems with media queries

--- a/index.html
+++ b/index.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
+
 <head>
     <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <header class="page-header">
-        <h1 id="page-title" class="title">
-            Wombat Coffee Roasters
-        </h1>
+  <div class="panel">
+      <h2>Single origin</h2>
+      <div class="panel-body">
+          We have built partnerships with small farms in Kampala. We hand-select beans
+          at the peak of the season. We then carefully select them in <a href="/batch-size">small batches </a> to maximize value for money.
+      </div>
+  </div>
 
-        <nav>
-            <ul id="main-nav" class="nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/coffees">Coffees</a></li>
-                <li><a href="/brewers">Brewers</a></li>
-                <li>
-                    <a 
-                        href="/specials" 
-                        class="featured"                        
-                    >Specials</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <footer class="footer">
-        &copy; 2020 Diana Coffee &mdash;
-        <a href="/terms">Terms of use</a>
-    </footer>
+  <div class="panel large-panel">
+    <h2>Single origin</h2>
+    <div class="panel-body">
+        We have built partnerships with small farms in Kampala. We hand-select beans
+        at the peak of the season. We then carefully select them in <a href="/batch-size">small batches </a> to maximize value for money.
+    </div>
+</div>
 </body>
