Used custom properties

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
 </head>
 
 <body>
-  <div class="panel">
-      <h2>Single origin</h2>
-      <div class="panel-body">
-          We have built partnerships with small farms in Kampala. We hand-select beans
-          at the peak of the season. We then carefully select them in <a href="/batch-size">small batches </a> to maximize value for money.
-      </div>
-  </div>
-
-  <div class="panel large-panel">
-    <h2>Single origin</h2>
-    <div class="panel-body">
-        We have built partnerships with small farms in Kampala. We hand-select beans
-        at the peak of the season. We then carefully select them in <a href="/batch-size">small batches </a> to maximize value for money.
+    <div class="panel">
+        <h2>Single-orange</h2>
+        <div class="panel-body">
+            Something to know about the line height is hat it accepts both units and unitless values. 
+            Jarrett Foster is Associate Director of Enrollment Management  
+        </div>
     </div>
-</div>
+    <aside class="dark">
+        <div class="panel">
+            <h2>Single-orange</h2>
+            <div class="panel-body">
+                Something to know about the line height is hat it accepts both units and unitless values. 
+                Jarrett Foster is Associate Director of Enrollment Management  
+            </div>
+        </div>
+    </aside>
 </body>
