used block formatting context to format content in a media object

--- a/index.html
+++ b/index.html
@@ -5,29 +5,59 @@
 </head>
 
 <body>
-    <header>
-        <h1>Franklin Running Club</h1>
-    </header>
+    <!-- Double container pattern. -->
     <div class="container">
-        <main class="main">
-            <h2>Come join us!</h2>
-            <p>
-                The Franklin Running Club meets at 6:00pm evening at 
-                every thursday at the town square. Runs are three to five
-                miles at your own pace.
-            </p>
+        <header>
+            <h1>Franklin Running Club</h1>
+        </header>
+        <main class="main clearfix">
+            <h2>Running tips</h2>
+            <div>
+                <div class="media">
+                    <img class="media-image" src="img1.png">
+                    <div class="media-body">
+                        <h4>Strength</h4>
+                        <p>
+                            Strength training is an important part of
+                            injury prevention. Focus on your core&mdash;especially
+                            your abs and glutes. lak;jfkljdl kajdklfj;asdkl fja;kld jaklj fa;sl
+                        </p>
+                    </div>
+                </div>
+
+                <div class="media">
+                    <img class="media-image" src="img2.jpg">
+                    <div class="media-body">
+                        <h4>Cadence</h4>
+                        <p>
+                            Check your stride turnover. The most efficient
+                            runners take about 180 steps per minute. kkkkkkkkkkkkk kk k k  k k k k k kk k kk jk kjklj kj kj k 
+                        </p>
+                    </div>
+                </div>
+
+                <div class="media">
+                    <img class="media-image" src="img3.jpg">
+                    <div class="media-body">
+                        <h4>Change it up</h4>
+                        <p>
+                            Don't run the same every time you hit the road.
+                            Vary your pace, and vary the distance of your runs.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="media">
+                    <img class="media-image" src="img1.png">
+                    <div class="media-body">
+                        <h4>Focus on form</h4>
+                        <p>
+                            Run tall but relaxed. Your fet should hit the
+                            ground beneath your hips, not out in front of you.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </main>
-        <aside class="sidebar">
-            <a href="/twitter" class="button-link">
-                Follow us on twitter
-            </a>
-            <a href="/facebook" class="button-link">
-                Like us on FaceBook
-            </a>
-            <a href="/sponsors" class="sponsor">
-                Become a sponsor
-            </a>
-        </aside>
-        
     </div>
 </body>
