--- a/index.html
+++ b/index.html
@@ -12,51 +12,62 @@
         </header>
         <main class="main clearfix">
             <h2>Running tips</h2>
-            <div>
-                <div class="media">
-                    <img class="media-image" src="img1.png">
-                    <div class="media-body">
-                        <h4>Strength</h4>
-                        <p>
-                            Strength training is an important part of
-                            injury prevention. Focus on your core&mdash;especially
-                            your abs and glutes. lak;jfkljdl kajdklfj;asdkl fja;kld jaklj fa;sl
-                        </p>
+
+            <div class="row">
+                <div class="column-6">
+                    <div class="media">
+                        <img class="media-image" src="img1.png">
+                        <div class="media-body">
+                            <h4>Strength</h4>
+                            <p>
+                                Strength training is an important part of
+                                injury prevention. Focus on your core&mdash;especially
+                                your abs and glutes. lak;jfkljdl kajdklfj;asdkl fja;kld jaklj fa;sl
+                            </p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="media">
-                    <img class="media-image" src="img2.jpg">
-                    <div class="media-body">
-                        <h4>Cadence</h4>
-                        <p>
-                            Check your stride turnover. The most efficient
-                            runners take about 180 steps per minute. kkkkkkkkkkkkk kk k k  k k k k k kk k kk jk kjklj kj kj k 
-                        </p>
+                <div class="column-6">
+                    <div class="media">
+                        <img class="media-image" src="img2.jpg">
+                        <div class="media-body">
+                            <h4>Cadence</h4>
+                            <p>
+                                Check your stride turnover. The most efficient
+                                runners take about 180 steps per minute. kkkkkkkkkkkkk kk k k  k k k k k kk k kk jk kjklj kj kj k 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="column-6">
+                    <div class="media">
+                        <img class="media-image" src="img3.jpg">
+                        <div class="media-body">
+                            <h4>Change it up</h4>
+                            <p>
+                                Don't run the same every time you hit the road.
+                                Vary your pace, and vary the distance of your runs.
+                            </p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="media">
-                    <img class="media-image" src="img3.jpg">
-                    <div class="media-body">
-                        <h4>Change it up</h4>
-                        <p>
-                            Don't run the same every time you hit the road.
-                            Vary your pace, and vary the distance of your runs.
-                        </p>
+                <div class="column-6">
+                    <div class="media">
+                        <img class="media-image" src="img1.png">
+                        <div class="media-body">
+                            <h4>Focus on form</h4>
+                            <p>
+                                Run tall but relaxed. Your fet should hit the
+                                ground beneath your hips, not out in front of you.
+                            </p>
+                        </div>
                     </div>
-                </div>
-
-                <div class="media">
-                    <img class="media-image" src="img1.png">
-                    <div class="media-body">
-                        <h4>Focus on form</h4>
-                        <p>
-                            Run tall but relaxed. Your fet should hit the
-                            ground beneath your hips, not out in front of you.
-                        </p>
-                    </div>
-                </div>
+                </div>                
             </div>
         </main>
     </div>
