finished using flexbox to style ink webpage. Moving on to chapter 6 about grid layout

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -22,18 +22,27 @@
             </ul>
         </nav>
 
-        <main class="flex">
-            <div class="column-main tile">
-                <h1>Team collaboration done right</h1>
+        <div class="flex">
+            <div class="column-sidebar2">Holy</div>
+            <div class="column-main2">Grail</div>
+            <div class="column-sidebar2">Layout</div>
+        </div>
+        <div class="flex">
+            <div class="column-main">            
+                 <h1>Team collabo done right</h1>
                 <p>Thousands of teams from all over the world
-                    turn to <b>Ink</b> to communicate and get things done.
-                </p>
+                    turn to <b>Ink</b> to communicate and get things done. Thousands of teams from all over the wor
+                    Thousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the wor
+                    Thousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the wor
+                    Thousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the wor
+                    Thousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the wor
+                </p> 
             </div>
 
             <div class="column-sidebar">
-                <div class="tile">
+               <div class="tile login"> 
                     <form action="" class="login-form">
-                        <h3>Login</h3>
+                        <h1>Login</h1>
                         <p>
                             <label for="username">Username</label>
                             <input id="username" type="text" name="username" />
@@ -48,8 +57,8 @@
                     </form>
                 </div>
 
-                <div class="tile centered">
-                    <small>Starting at </small>
+                <div class="tile centered pricing">
+                    <small class="cost-heading">Starting at </small>
                     <div class="cost">
                         <span class="cost-currency">$</span>
                         <span class="cost-dollars">20</span>
@@ -58,8 +67,8 @@
                     <a class="cta-button" href="/pricing">
                         Sign up
                     </a>
-                </div>
+                </div> 
             </div>
-        </main>
+        </div>
     </div>
 </body>
