--- a/grid/index.html
+++ b/grid/index.html
@@ -6,12 +6,61 @@
 </head>
 
 <body>
-    <div class="grid">
-        <div class="a">a</div>
-        <div class="b">b</div>
-        <div class="c">c</div>
-        <div class="d">d</div>
-        <div class="e">e</div>
-        <div class="f">f</div>
+    <div class="container">
+        <header>
+            <h1>Ink</h1>
+        </header>
+        <nav>
+            <ul class="site-nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/features">Features</a></li>
+                <li><a href="/pricing">Pricing</a></li>
+                <li><a href="/support">Suppot</a></li>
+                <li class="nav-right">
+                    <a href="/about">About</a>
+                </li>
+            </ul>
+        </nav>
+
+    
+        <main class="main tile">          
+            <h1>Team collabo done right</h1>
+            <p>Thousands of teams from all over the world
+                turn to <b>Ink</b> to communicate and get things done. Thousands of teams from all over the wor
+                Thousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the wor
+                Thousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the wor
+                Thousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the wor
+                Thousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the worThousands of teams from all over the wor
+            </p> 
+        </main>  
+
+        <div class="tile sidebar-top login"> 
+            <form action="" class="login-form">
+                <h1>Login</h1>
+                <p>
+                    <label for="username">Username</label>
+                    <input id="username" type="text" name="username" />
+                </p>
+
+                <p>
+                    <label for="password">Password</label>
+                    <input id="password" type="password" name="password" />
+                </p>
+
+                <button type="submit">Login</button>
+            </form>
+        </div>
+
+        <div class="tile sidebar-bottom centered pricing">
+            <small class="cost-heading">Starting at </small>
+            <div class="cost">
+                <span class="cost-currency">$</span>
+                <span class="cost-dollars">20</span>
+                <span class="cost-cents">.00</span>
+            </div>
+            <a class="cta-button" href="/pricing">
+                Sign up
+            </a>
+        </div> 
     </div>
 </body>
