Created a simple drown down menu using both relative and absolute positioning techniques together. Its not complete. The Main Menu still shows when the modal class from signup is displayed

--- a/positioning/index.html
+++ b/positioning/index.html
@@ -28,6 +28,26 @@
         </div>
     </div>
 
+    <body>
+        <div class="container">
+            <nav>
+                <div class="dropdown">
+                    <div class="dropdown-label">Main Menu</div>
+                    <div class="dropdown-menu">
+                        <ul class="submenu">
+                            <li><a href="/">Home</a></li>
+                            <li><a href="/coffees">Coffees</a></li>
+                            <li><a href="/brewsers">Brewers</a></li>
+                            <li><a href="/specials">Specials</a></li>
+                            <li><a href="/about">About us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <h1>Wombat Coffee Roasters</h1>
+        </div>
+    </body>
+
     <script type="text/javascript">
         var button = document.getElementById('open')
         var close = document.getElementById('close')
