used to position: sticky on a sidebar column

--- a/positioning/index.html
+++ b/positioning/index.html
@@ -29,30 +29,38 @@
     </div>
 
     <div class="container">
-        <nav>
-            <div class="dropdown">
-                <div class="dropdown-label">Main Menu</div>
-                <div class="dropdown-menu">
-                    <ul class="submenu">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/coffees">Coffees</a></li>
-                        <li><a href="/brewsers">Brewers</a></li>
-                        <li><a href="/specials">Specials</a></li>
-                        <li><a href="/about">About us</a></li>
-                    </ul>
+        <main class="col-main">
+            <nav>
+                <div class="dropdown">
+                    <div class="dropdown-label">Main Menu</div>
+                    <div class="dropdown-menu">
+                        <ul class="submenu">
+                            <li><a href="/">Home</a></li>
+                            <li><a href="/coffees">Coffees</a></li>
+                            <li><a href="/brewsers">Brewers</a></li>
+                            <li><a href="/specials">Specials</a></li>
+                            <li><a href="/about">About us</a></li>
+                        </ul>
+                    </div>
                 </div>
+            </nav>
+            <h1>Wombat Coffee Roasters</h1>
+        </main>
+
+        <aside class="col-sidebar">
+            <div class="affix">
+                <ul class="submenu">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/coffees">Coffees</a></li>
+                    <li><a href="/brewsers">Brewers</a></li>
+                    <li><a href="/specials">Specials</a></li>
+                    <li><a href="/about">About us</a></li>
+                </ul>
             </div>
-        </nav>
-        <h1>Wombat Coffee Roasters</h1>
+        </aside>
     </div>
 
-    <div class="stack">
-        <div class="item item1">one
-            <div class="inner">Inner</div>
-        </div>
-        <div class="item item2">two</div>
-        <div class="item item3">three</div>
-    </div>
+   
 
     <script type="text/javascript">
         var button = document.getElementById('open')
