used media queries to set designs for a breakpoint of 35em

--- a/responsive/index.html
+++ b/responsive/index.html
@@ -36,7 +36,7 @@
 
 <main id="main">
     <div class="row">
-        <section class="column">
+        <section class="column column-1">
             <h2 class="subtitle">Single Origin</h2>
             <p>We have built partnerships with small farms
                 around the world to hand-select beans at the 
@@ -45,14 +45,14 @@
             </p>
         </section>
 
-        <section class="column">
+        <section class="column column-2">
             <h2 class="subtitle">Blends</h2>
             <p>Our tasters have put together a selection of carefully balanced blends. Our famous
                 <a href="/house-blend.html">house blend</a> is available year round.
             </p>
         </section>
 
-        <section class="column">
+        <section class="column column-3">
             <h2 class="subtitle">Brewing Equitment</h2>
             <p>We offer our favorite kettles, French  presses, and pour-over cones. Come to one our
                 <a href="/classes.html">brewing classes</a> to learn how to brew the perfect pour-over cup.
